more styling on marketing page, removed some unnecessary pictures, started work on map

--- a/index.html
+++ b/index.html
@@ -15,20 +15,58 @@
 <body>
 
   <nav>
-    <h1>Luncher</h1>
+    <h1><a href="#">Luncher</a></h1>
     <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="/">About Us</a></li>
-      <li><a href="/">Blog</a></li>
-      <li><a href="/">Contact</a></li>
-      <li><a href="/">Sign In</a></li>
+      <li><a href="/" class="btn">Donate</a></li>
+      <li><a href="/" class="btn">Sign In</a></li>
     </ul>
   </nav>
+
+  <section class="splash">
+      <div class="splash-image"></div>
+      <div class="tagline">
+        <h2>Help feed children, today!</h2>
+      </div>
+  </section>
   
-  <div class="container home">
-    <div class="btn">Hello</div>
-  </div>
+  <section>
+    <i class="leading-arrow fas fa-arrow-alt-circle-down"></i>
+  </section>
   
+  <section class="container home">
+    <div class="luncher-info grid">
+      <p class="box icon"><i class="fas fa-info"></i></p>
+      <p class="box text">There are kids who need healthy meals at school
+        <br>
+        Find a school in need, today, and help feed hungry kids
+      </p>
+      <!-- <i class="fas fa-map-marked-alt"></i> -->
+    </div>
+    <div class="school-map grid">
+      <p class="box icon"><i class="fas fa-map-marked-alt"></i></p>
+      <p class="box description">There are kids who need healthy meals at school
+        <br>
+        Find a school in need, today, and help feed hungry kids
+      </p>
+      <p class="box map">This is a map
+      </p>
+    </div>
+
+
+    
+
+
+
+
+
+  
+  
+  
+    <div class="btn">Donate</div>
+  
+  </section> <!-- container home -->
+
+
   <footer>
     <p>Copyright Luncher 2019</p>
   </footer>
