readme link, small styling changes

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
       <div class="splash-image"></div>
       <div class="tagline">
         <h2>Help feed children, today!</h2>
+        <br>
+        <div class="btn">Donate</div>
       </div>
+      
   </section>
   
   <section>
@@ -39,21 +42,35 @@
   </section>
   
   <section class="container home">
-    <div class="luncher-info grid">
-      <p class="box icon"><i class="fas fa-info"></i></p>
-      <p class="box text">There are kids who need healthy meals at school
-        <br>
-        Find a school in need, today, and help feed hungry kids
-      </p>
-      <!-- <i class="fas fa-map-marked-alt"></i> -->
+    <div class="luncher-info">
+      <div class="grid">
+        <p class="box icon"><i class="fas fa-info"></i></p>
+        <p class="box text">There are kids who need healthy meals at school
+          <br>
+          Find a school in need, today, and help feed hungry kids
+        </p>
+
+        <p class="box icon"><i class="fas fa-heart"></i></p>
+        <p class="box text">There are kids who need healthy meals at school
+          <br>
+          Find a school in need, today, and help feed hungry kids
+        </p>
+
+        <p class="box icon"><i class="fas fa-school"></i></p>
+        <p class="box text">Help your school feed students in need
+          <br>
+          Register today
+        </p>
+
+      </div>
     </div>
-    <div class="school-map grid">
-      <p class="box icon"><i class="fas fa-map-marked-alt"></i></p>
-      <p class="box description">There are kids who need healthy meals at school
+    <div class="school-map">
+      <p class="box description">
+        <i class="icon fas fa-map-marked-alt"></i>
         <br>
-        Find a school in need, today, and help feed hungry kids
+        Find out what schools near you need donations now
       </p>
-      <p class="box map" id="mapid">This is a map
+      <p class="box map" id="mapid">~this is a map~
       </p>
     </div>
 
@@ -67,7 +84,7 @@
   
   
   
-    <div class="btn">Donate</div>
+    
   
   </section> <!-- container home -->
 
