--- a/donate.html
+++ b/donate.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Luncher</title>
+  <title>Luncher | Donate</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <link href="https://fonts.googleapis.com/css?family=Arvo:400,700|Roboto" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
@@ -22,12 +22,12 @@
   <meta name="theme-color" content="#ffffff">
 </head>
 
-<body class="landing-page">
+<body>
 
   <nav>
-    <h1><a href="#">Luncher</a></h1>
+    <h1><a href="./index.html">Luncher</a></h1>
     <ul>
-      <li><a href="./donate.html" class="btn">Donate</a></li>
+      <li><a href="#" class="btn">Donate</a></li>
       <li><a href="./signin.html" class="btn">Sign-In</a></li>
     </ul>
   </nav>
