Created a forgot password page

--- a/resetpassword.html
+++ b/resetpassword.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Luncher | Sign-In</title>
+  <title>Luncher | Reset Password</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <link href="https://fonts.googleapis.com/css?family=Arvo:400,700|Roboto" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
@@ -22,13 +22,13 @@
   <meta name="theme-color" content="#ffffff">
 </head>
 
-<body class="sign-in-page">
+<body class="reset-password">
 
   <nav>
     <h1><a href="./index.html">Luncher</a></h1>
     <ul>
       <li><a href="./donate.html" class="btn">Donate</a></li>
-      <!-- <li><a href="#" class="btn">Sign-In</a></li> -->
+      <li><a href="./signin.html" class="btn">Sign-In</a></li>
     </ul>
   </nav>
 
@@ -38,14 +38,14 @@
       <div class="splash-overlay"></div>
     </div>
     <form class="login">
-      <h3>Sign-in to your account</h3>
+      <h3>What is your email?</h3>
+      <br>
+      <input type="text" id="fname" name="fname" placeholder="Email address">
+
+
+      <div class="btn">Reset Password</div>
         <br>
-      <input type="text" id="fname" name="fname" placeholder="Email">
-        <br>
-      <input type="text" id="lname" name="lname" placeholder="Password">
-      <div class="btn">Sign-In</div>
-        <br>
-      <p><a href="./resetpassword.html">Need help?</a> | <a href="">Don't have an account?</a></p>
+      <p><a href="./resetpassword.html">Need help?</a></p>
     </form>
   
     
