--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <a href="#luncher-info" class="divider"><i class="leading-arrow fas fa-arrow-alt-circle-down"></i></a>
   </section>
   
-  <section class="container home">
+  <section class="container-basic home">
     <section class="luncher-info" id="luncher-info">
       <div class="grid-col-2">
 
