--- a/resetpassword.html
+++ b/resetpassword.html
@@ -39,7 +39,7 @@
     </div>
     <form class="login">
       <h3>What is your email?</h3>
-      <br>
+        <br>
       <input type="text" id="fname" name="fname" placeholder="Email address">
 
 
@@ -62,12 +62,12 @@
 
 
   <section>
-    <a href="#luncher-info" class="divider"><i class="leading-arrow fas fa-arrow-alt-circle-down"></i></a>
+    <a href="#contact" class="divider"><i class="leading-arrow fas fa-arrow-alt-circle-down"></i></a>
   </section>
 
-  <section class="container sign-in">
+  <section class="container-basic reset-password-footer">
     
-    <section class="contact">
+    <section class="contact" id="contact">
       <div class="grid-col-4">
         <h3>Contact Us</h3>
 
