--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="tagline">
         <h2>Help feed children, today!</h2>
         <br>
-        <div class="btn">Donate</div>
+        <a href="./donate.html"><div class="btn">Donate</div></a>
       </div>
       
   </section>
@@ -52,7 +52,7 @@
     <section class="luncher-info" id="luncher-info">
       <div class="grid-col-2">
 
-        <div class="btn">Sign-in or Register</div>
+        <a href="./signin.html"><div class="btn">Sign-in or Register</div></a>
 
         <p class=" icon"><i class="fas fa-info"></i></p>
         <p class=" text">There are kids who need healthy meals at school
