styled donate page with new color palette

--- a/donate.html
+++ b/donate.html
@@ -36,19 +36,22 @@
 
 
   <section class="schools-by-state">
-    <h1>Donate</h1>
-    <div class="container">
+    <div class="school-filter-bar">
+      <h1>Donate</h1>
       <p>Filter school by state</p>
-      <div class="row">
-        <div class="col-6 col-sm-4 col-md-2 py-2 centered"><div class="state-labels"><a href="" class="btn">AL</a></div></div>
-        <div class="col-6 col-sm-4 col-md-2 py-2 centered"><div class="state-labels"><a href="" class="btn">CA</a></div></div>
-        <div class="col-6 col-sm-4 col-md-2 py-2 centered"><div class="state-labels"><a href="" class="btn">HI</a></div></div>
-        <div class="col-6 col-sm-4 col-md-2 py-2 centered"><div class="state-labels"><a href="" class="btn">NY</a></div></div>
-        <div class="col-6 col-sm-4 col-md-2 py-2 centered"><div class="state-labels"><a href="" class="btn">NV</a></div></div>
-        <div class="col-6 col-sm-4 col-md-2 py-2 centered"><div class="state-labels"><a href="" class="btn">OR</a></div></div>
-        <div class="col-6 col-sm-4 col-md-2 py-2 centered"><div class="state-labels"><a href="" class="btn">SC</a></div></div>
-        <div class="col-6 col-sm-4 col-md-2 py-2 centered"><div class="state-labels"><a href="" class="btn">TX</a></div></div>
-        <div class="col-6 col-sm-4 col-md-2 py-2 centered"><div class="state-labels"><a href="" class="btn">WA</a></div></div>
+      <div class="container">
+        <div class="row">
+          <div class="col-6 col-sm-4 col-md-2 py-2 centered"><div class="state-labels"><a href="" class="btn">AL</a></div></div>
+          <div class="col-6 col-sm-4 col-md-2 py-2 centered"><div class="state-labels"><a href="" class="btn">CA</a></div></div>
+          <div class="col-6 col-sm-4 col-md-2 py-2 centered"><div class="state-labels"><a href="" class="btn">HI</a></div></div>
+          <div class="col-6 col-sm-4 col-md-2 py-2 centered"><div class="state-labels"><a href="" class="btn">LA</a></div></div>
+          <div class="col-6 col-sm-4 col-md-2 py-2 centered"><div class="state-labels"><a href="" class="btn">NY</a></div></div>
+          <div class="col-6 col-sm-4 col-md-2 py-2 centered"><div class="state-labels"><a href="" class="btn">NV</a></div></div>
+          <div class="col-6 col-sm-4 col-md-2 py-2 centered"><div class="state-labels"><a href="" class="btn">OR</a></div></div>
+          <div class="col-6 col-sm-4 col-md-2 py-2 centered"><div class="state-labels"><a href="" class="btn">SC</a></div></div>
+          <div class="col-6 col-sm-4 col-md-2 py-2 centered"><div class="state-labels"><a href="" class="btn">TX</a></div></div>
+          <div class="col-6 col-sm-4 col-md-2 py-2 centered"><div class="state-labels"><a href="" class="btn">WA</a></div></div>
+        </div>
       </div>
     </div>
   </section>
