fixed problems made with last commit. index height, nav width

--- a/donate.html
+++ b/donate.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="donate">
 <head>
   <meta charset="utf-8">
   <title>Luncher | Donate</title>
@@ -25,7 +25,7 @@
 
 <body class="donate">
 
-  <nav>
+  <nav class="nav-solid">
     <h1><a href="./index.html">Luncher</a></h1>
     <ul>
       <!-- <li><a href="#" class="btn">Donate</a></li> -->
