--- a/resetpassword.html
+++ b/resetpassword.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Luncher | Reset Password</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <link href="https://fonts.googleapis.com/css?family=Arvo:400,700|Roboto" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Schoolbell|Arvo:400,700|Roboto" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <link href="css/index.css" rel="stylesheet">
   <link href="css/leaflet.css" rel="stylesheet">
