Styling update to donate page

--- a/donate.html
+++ b/donate.html
@@ -34,7 +34,6 @@
   </nav>
 
 
-
   <section class="schools-by-state">
     <div class="school-filter-bar">
       <h1>Donate</h1>
@@ -67,7 +66,9 @@
             <div class="card-body">
               <h4 class="card-title">Ruskin Elementary</h4>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <p class="card-text italic">Needs $1063</p>
+              <p class="card-text italic">
+                <div class="donation-need"> $421 </div>
+              </p>
               <a href="#" class="btn btn-primary">Donate</a>
             </div>
           </div>
@@ -79,7 +80,9 @@
             <div class="card-body">
               <h4 class="card-title">Oakridge Elementary</h4>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <p class="card-text italic">Needs $1113</p>
+              <p class="card-text italic">
+                  <div class="donation-need"> $1113 </div>
+              </p>
               <a href="#" class="btn btn-primary">Donate</a>
             </div>
           </div>
@@ -91,7 +94,9 @@
             <div class="card-body">
               <h4 class="card-title">Piedmont High School</h4>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <p class="card-text italic">Needs $421</p>
+              <p class="card-text italic">
+                  <div class="donation-need"> $1069 </div>
+              </p>
               <a href="#" class="btn btn-primary">Donate</a>
             </div>
           </div>
@@ -102,35 +107,21 @@
           <div class="card">
             <img class="card-img-top" src="./assets/img/21953541749_e2b355be48_b.jpg" alt="Card image cap">
             <div class="card-body">
-              <h4 class="card-title">Independance High School</h4>
+              <h4 class="card-title">San Dimas High School</h4>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <p class="card-text italic">Needs $350</p>
+              <p class="card-text italic">
+                  <div class="donation-need"> $683 </div>
+              </p>
               <a href="#" class="btn btn-primary">Donate</a>
             </div>
           </div>
         </div>
 
 
-
       </div>
     </div>
   </section>
   
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
   <section>
     <a href="#contact" class="divider"><i class="leading-arrow fas fa-arrow-alt-circle-down"></i></a>
@@ -178,6 +169,7 @@
   <footer>
     <p>Copyright Luncher 2019</p>
   </footer>
+
 </body>
 
 </html>
